# la-hacks-2026

./: .gitignore  Makefile  PLAN.md  README.md  pyproject.toml  requirements.txt
data/results/: baseline.json  headline.json  verified.json
lookout/: data_models.py  diffs.py  loop.py  report.py  trajectory.py  verifier.py
lookout/tasks/: __init__.py  checks.py  definitions.py  registry.py
scripts/: build_report.py  capture_one.py  capture_verified_one.py  compute_metrics.py  find_flagship.py  label_steps.py  run_baseline.py  run_offline_verifier.py  run_verified.py  spike_capture.py  spike_replan.py  verify_one.py
tests/: test_data_models.py  test_diffs.py  test_tasks.py  test_verifier_parse.py
